--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ after_success:
 #login to docker cli
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
 #take images and push to docker hub
-  - docker push ryan801/multi-client
-  - docker push ryan801/multi-nginx
-  - docker push ryan801/multi-server
-  - docker push ryan801/multi-worker
+  - docker push shawr3/multi-client
+  - docker push shawr3/multi-nginx
+  - docker push shawr3/multi-server
+  - docker push shawr3/multi-worker
