--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+language: generic
 sudo: required
 services
   - docker
@@ -13,7 +14,7 @@ after_success:
   - docker build -t ryan801/multi-nginx ./nginx
   - docker build -t ryan801/multi-server ./server
   - docker build -t ryan801/multi-worker ./worker
-  
+
 #login to docker cli
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
 #take images and push to docker hub
