--- a/.travis.yml
+++ b/.travis.yml
@@ -4,18 +4,18 @@ services:
   - docker
 
 before_install:
-  - docker build -t ryan801/react-test -f ./client/Dockerfile.dev ./client
+  - docker build -t shawr3/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-    - docker run -e CI=true ryan801/react-test npm test
+    - docker run -e CI=true shawr3/react-test npm test
 
 after_success:
-  - docker build -t ryan801/multi-client ./client
-  - docker build -t ryan801/multi-nginx ./nginx
-  - docker build -t ryan801/multi-server ./server
-  - docker build -t ryan801/multi-worker ./worker
+  - docker build -t shawr3/multi-client ./client
+  - docker build -t shawr3/multi-nginx ./nginx
+  - docker build -t shawr3/multi-server ./server
+  - docker build -t shawr3/multi-worker ./worker
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
-  - docker push ryan801/multi-client
-  - docker push ryan801/multi-nginx
-  - docker push ryan801/multi-server
-  - docker push ryan801/multi-worker
+  - docker push shawr3/multi-client
+  - docker push shawr3/multi-nginx
+  - docker push shawr3/multi-server
+  - docker push shawr3/multi-worker
